# BitcoinUSTbills

./: .gitignore  AGENT-FIX.md  AUTOMATIC_MINTING_EXAMPLE.md  DEBUG_MINTING.md  FEATURES.md  FEE-FIX-COMPLETE.md  FRONTEND-IMPROVEMENTS.md  INSUFFICIENT-ALLOWANCE-FIX.md  LICENSE  README.md  REFRESH-FUNCTION-FIX.md  canister_ids.json  dfx.json  final-test-results.md  function-test-results.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.cursor/rules/: language.mdc
.github/workflows/: ci.yml  pr.yml  publish-docs.yml  shared-build.yml
css-backup/: app.css.backup
scripts/: SCRIPT-FIXES.md  TEST-FLOW-README.md  TESTING-GUIDE.md  check-ousg-balances.sh  check.sh  clean.sh  deploy-local-ousg.sh  deploy-local.sh  generate-bindings.sh  generate-env.sh  local-mint-ousg.sh  mint-ckbtc-local.sh  mint-ckbtc-to-doxa.sh  mint-ousg-local.sh  run-test-e2e.sh  setup-dfx-identity.sh  test-functions.sh  test-mint-redeem-flow.sh  transfer-ckbtc-local.sh  validate-and-test-all.sh
src/: Batch.mo
src/backend/: Cargo.toml
src/backend/src/: errors.rs  evm_rpc.rs  exchange_rate_canister.rs  guard.rs  handlers.rs  lib.rs  ousg_ledger.rs  storage.rs  store.rs  token.rs  types.rs  utils.rs
src/backend/src/types/: api.rs  core.rs  credentials.rs  document.rs  external.rs  kyc.rs  mod.rs  platform.rs  trading.rs
tests/: README.md  authentication.spec.ts  bitcoin-ust-bills-flow.spec.ts  bitcoin-ust-bills-recorded.spec.ts  global-setup.ts  global-teardown.ts  helpers.ts  kyc-verification.spec.ts  registration.spec.ts  test-data.ts  wallet-operations.spec.ts
(+108 files in other folders)
