[package]
name = "backend"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.4"
ic-cdk = "0.18.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ic-stable-structures = "0.7.0"
ic-cdk-timers = "0.12.2"
serde_bytes = "0.11.17"


# No dev-dependencies needed for current implementation
