[package]
name = "backend"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.4"
ic-cdk = "0.18.5"
ic-cdk-macros = "0.5.0"
ethers-core = "2.0.14"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ic-stable-structures = "0.7.0"
ic-cdk-timers = "0.12.2"
serde_bytes = "0.11.17"
getrandom = { version = "0.2", features = ["custom"] }


# No dev-dependencies needed for current implementation
